* CustomSwitchRenderer.cs: UI fixes
* App.xaml:
* APIpaths.cs:
* DataAccess.cs:
* TenantsPage.xaml:
* CalendarPage.xaml:
* PaymentsPage.xaml:
* CustomSwitch.cs:
* TenantsPage.xaml.cs:
* MasterMenuPage.xaml:
* PaymentsPage.xaml.cs:
* CalendarPage.xaml.cs:
* TransactionsPage.xaml:
* NotificationsPage.xaml:
* PendingApprovalItem.cs:
* TransactionsPage.xaml.cs:
* NotificationsPage.xaml.cs:
* PaymentsPageModel.cs:
* MasterMenuPageModel.cs:
* MaintenanceTicketsPage.xaml:
* NotificationsPageModel.cs:
* AndroidManifest.xml:
* MaintenanceTicketsPageModel.cs:

--- a/ManageGo/Views/MasterMenuPage.xaml
+++ b/ManageGo/Views/MasterMenuPage.xaml
@@ -66,6 +66,10 @@
                     <Button Text="Tenants" Command="{Binding OnTenantsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent"  HorizontalOptions="Fill"/>
                 </Grid>
                 <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
+                <Grid Margin="0,0,4,0">
+                    <Label Text="Notifications" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
+                    <Button Text="Notifications" Command="{Binding OnNotificationsTapped}" FontSize="Small" BackgroundColor="Transparent" TextColor="Transparent" HorizontalOptions="Fill"/>
+                </Grid>
                 <BoxView BackgroundColor="{StaticResource Grey-Light-2}"/>
                 <Grid Margin="0,0,4,0">
                     <Label Text="Settings" TextColor="{StaticResource Grey-Dark-1}" FontSize="Medium"  VerticalOptions="CenterAndExpand" />
