--- a/ManageGo/App.xaml
+++ b/ManageGo/App.xaml
@@ -10,7 +10,7 @@
             <Color x:Key="Secondary">#60A6F5</Color>
             <Color x:Key="Tertiary">#FFFFFF</Color>
             <Color x:Key="Grey-Mid-1">#58595B</Color>
-            <Color x:Key="Grey-Light-1">#A7A9AC</Color>
+            <Color x:Key="Grey-Light-1">#898B8D</Color>
             <Color x:Key="Grey-Light-2">#f4f4f4</Color>
             <Color x:Key="Grey-Mid-2">#949494</Color>
             <Color x:Key="Grey-Dark-1">#323232</Color>
