--- a/ManageGo/Views/CalendarPage.xaml
+++ b/ManageGo/Views/CalendarPage.xaml
@@ -32,20 +32,19 @@
                 <Label Text="Calendar" TextColor="{StaticResource Grey-Dark-1}"  FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
                 <BoxView HeightRequest="1" BackgroundColor="{StaticResource Primary}" />
             </StackLayout>
-            
             <Grid Grid.Row="2">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="auto" />
                     <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                <controls:CalendarView x:Name="CalView" Grid.Row="0" VerticalOptions="Start" HeightRequest="250"  SelectedDate="{Binding SelectedDate}" HighlightedDates="{Binding HighlightedDates}"  />
+              <controls:CalendarView x:Name="CalView" Grid.Row="0" VerticalOptions="Start" HeightRequest="250"  SelectedDate="{Binding SelectedDate}" HighlightedDates="{Binding HighlightedDates}"  />
               <ListView x:Name="CalEventList" Grid.Row="1" ItemsSource="{Binding CalendarEvents}" SelectionMode="None" HasUnevenRows="true" BackgroundColor="Transparent" SeparatorVisibility="None" Margin="22,18,22,18" CachingStrategy="RecycleElement">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <Frame HasShadow="false" BackgroundColor="White" Margin="0,0,0,12" Padding="8">
-                                    <StackLayout Orientation="Horizontal" Spacing="17">
-                                        <Image Source="calendar_blue.png" Margin="8,6,0,0" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
+                                <Frame HasShadow="false" BackgroundColor="White"  Margin="0,0,0,12" Padding="14,6,14,6">
+                                    <StackLayout Orientation="Horizontal" Margin="0,8,0,8" Spacing="17">
+                                        <Image Source="calendar_blue.png" Margin="8,0,0,0" HorizontalOptions="Center" VerticalOptions="StartAndExpand"/>
                                         <StackLayout HorizontalOptions="FillAndExpand">
                                             <StackLayout Orientation="Horizontal">
                                                 <Label Text="{Binding HeaderTime}" FontSize="Small" TextColor="{StaticResource Grey-Mid-1}" />
@@ -54,22 +53,16 @@
                                                 <StackLayout WidthRequest="18" HeightRequest="18" HorizontalOptions="EndAndExpand" VerticalOptions="CenterAndExpand">
                                                     <Image Source="{Binding ExpandButtonIcon}" VerticalOptions="StartAndExpand" HorizontalOptions="EndAndExpand"/>
                                                 </StackLayout>
-                                                <StackLayout.GestureRecognizers>
-                                                            <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
-                                                </StackLayout.GestureRecognizers>
+                                                
                                                 </StackLayout>
                                             <StackLayout>
                                                 <Label Text="{Binding Title}" FontSize="Medium" FontAttributes="Bold" TextColor="{StaticResource Grey-Dark-1}" />
-                                                <StackLayout.GestureRecognizers>
-                                                    <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
-                                                </StackLayout.GestureRecognizers>
+                                               
                                             </StackLayout>
                                             <StackLayout Spacing="8" Orientation="Horizontal">
                                                 <Image Source="building_grey.png" VerticalOptions="CenterAndExpand" />
                                                 <Label VerticalOptions="CenterAndExpand" Text="{Binding HeaderAddress}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
-                                                <StackLayout.GestureRecognizers>
-                                                    <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
-                                                </StackLayout.GestureRecognizers>
+                                               
                                             </StackLayout>
                                             <StackLayout IsVisible="{Binding DetailsShown}" Margin="0,12,0,0">
                                                 <Label Text="{Binding Note}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
@@ -83,6 +76,9 @@
                                         </StackLayout>
                                         </StackLayout>
                                     </StackLayout>
+                                    <Frame.GestureRecognizers>
+                                        <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
+                                    </Frame.GestureRecognizers>
                                 </Frame>
                             </ViewCell>
                         </DataTemplate>
