--- a/ManageGo/Views/MaintenanceTicketsPage.xaml
+++ b/ManageGo/Views/MaintenanceTicketsPage.xaml
@@ -9,6 +9,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="ManageGo.MaintenanceTicketsPage">
     <ContentPage.Resources>
         <local:InverseBoolConverter x:Key="InverseBoolConverter" />
+        <local:StringToBoolConverter x:Key="StringToBoolConverter" />
     </ContentPage.Resources>
     <RelativeLayout>
         <Grid RowSpacing="0"
@@ -40,8 +41,8 @@
             <Image Source="logo.png" Margin="-42,0,0,0" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand"/>
         </StackLayout>
         <StackLayout Spacing="0" Grid.Row="1">
-            <Label  Text="Tickets" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
-             <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}"/>
+            <Label Text="Tickets" TextColor="{StaticResource Grey-Dark-1}" FontAttributes="Bold" Margin="0,8,0,7" FontSize="Medium" HorizontalTextAlignment="Center"/>
+            <BoxView HeightRequest="1" BackgroundColor="{StaticResource Grey-Light-2}"/>
             <Grid VerticalOptions="FillAndExpand" MinimumHeightRequest="50" HeightRequest="50">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
@@ -85,13 +86,14 @@
             </StackLayout>
             <ContentView BackgroundColor="White" Content="{Binding PopContentView}" VerticalOptions="StartAndExpand"/>
         </StackLayout>
-        <!-- List of tickets -->
-        <ListView ItemsSource="{Binding FetchedTickets}" x:Name="MyListView" ItemAppearing="Handle_ItemAppearing" Margin="0" IsPullToRefreshEnabled="false" CachingStrategy="RecycleElement" SelectionMode="None" IsEnabled="{Binding ListIsEnabled}" Grid.Row="2" HasUnevenRows="true" VerticalOptions="Fill" BackgroundColor="#f9fafb" SeparatorVisibility="None" >
+        <StackLayout BackgroundColor="{StaticResource Grey-Light-2}" Grid.Row="2">
+            <!-- List of tickets -->
+            <ListView ItemsSource="{Binding FetchedTickets}" x:Name="MyListView" ItemAppearing="Handle_ItemAppearing" Margin="22,18,22,18" IsPullToRefreshEnabled="true" IsRefreshing="{Binding IsRefreshingList}" RefreshCommand="{Binding OnPulledToRefresh}" CachingStrategy="RecycleElement" SelectionMode="None" IsEnabled="{Binding ListIsEnabled}"  HasUnevenRows="true" VerticalOptions="Fill" BackgroundColor="Transparent" SeparatorVisibility="None" >
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <ViewCell>
-                        <Frame HasShadow="false" Margin="17,8,17,4" Padding="8,17,4,17" BackgroundColor="White">
-                            <Grid Margin="12">
+                        <Frame HasShadow="false" Margin="0,0,0,12" Padding="14,6,14,6" BackgroundColor="White">
+                            <Grid Margin="0,8,0,8">
                                 <Grid.ColumnDefinitions>
                                     <ColumnDefinition Width="*" />
                                     <ColumnDefinition Width="7*" />
@@ -105,47 +107,49 @@
                                              <RowDefinition Height="auto" />
                                              <RowDefinition Height="auto" />
                                         </Grid.RowDefinitions>
-                                        <Image HorizontalOptions="CenterAndExpand" Grid.Row="0" Source="{Binding CommentImage}" />
-                                        <Label Text="{Binding NumberOfRepliesString}" FontSize="Micro" VerticalOptions="CenterAndExpand" Margin="0,0,0,4" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" Grid.Row="0" TextColor="White"  />
+                                        <Image HorizontalOptions="CenterAndExpand" Margin="0,3,0,0" Grid.Row="0" Source="{Binding CommentImage}" />
+                                        <Label Text="{Binding NumberOfRepliesString}" FontSize="Micro" VerticalOptions="CenterAndExpand" Margin="0,3,0,4" HorizontalOptions="CenterAndExpand" HorizontalTextAlignment="Center" Grid.Row="0" TextColor="White"  />
                                         <Image HorizontalOptions="CenterAndExpand" IsVisible="{Binding HasAccess}" Grid.Row="1" Source="key_blue.png" />
                                         <Image HorizontalOptions="CenterAndExpand" IsVisible="{Binding HasEvent}" Grid.Row="2" Source="calendar_blue_sm.png" />
                                         <Image HorizontalOptions="CenterAndExpand" IsVisible="{Binding HasWorkorder}" Grid.Row="3" Source="wrench_blue.png" />
                                     </Grid>
                                 </StackLayout>
-                                <StackLayout Grid.Column="1" Spacing="12" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand">
-                                    <Label VerticalOptions="StartAndExpand" Text="{Binding TicketSubject}" FontAttributes="Bold" LineBreakMode="TailTruncation" />
+                                <StackLayout Grid.Column="1" Spacing="8" HorizontalOptions="FillAndExpand" VerticalOptions="CenterAndExpand">
+                                    <Label VerticalOptions="StartAndExpand" TextColor="{StaticResource Grey-Dark-1}" Text="{Binding TicketSubject}" FontSize="Medium" FontAttributes="Bold" LineBreakMode="TailTruncation" />
                                     <StackLayout Orientation="Horizontal">
-                                        <Label Text="{Binding FormattedDate}" FontSize="Small" TextColor="#58595b" VerticalTextAlignment="Center" VerticalOptions="Center" />
-                                        <Label Text="•" TextColor="#58595b" FontSize="Small" VerticalTextAlignment="Center" VerticalOptions="Center"/>
-                                        <Label Text="{Binding Category}" FontSize="Small" VerticalTextAlignment="Center" TextColor="#58595b" VerticalOptions="Center"/>
+                                        <Label Text="{Binding FormattedDate}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" VerticalTextAlignment="Center" VerticalOptions="Center" />
+                                        <Label Text="•" IsVisible="{Binding Category,Converter={StaticResource StringToBoolConverter}}" TextColor="{StaticResource Grey-Light-1}" FontSize="Small" VerticalTextAlignment="Center" VerticalOptions="Center"/>
+                                        <Label Text="{Binding Category}" FontSize="Small" VerticalTextAlignment="Center" TextColor="{StaticResource Grey-Light-1}" VerticalOptions="Center"/>
                                     </StackLayout>
-                                    <BoxView BackgroundColor="{StaticResource Grey-Light-2}" Margin="0,8,0,8" HeightRequest="1" HorizontalOptions="FillAndExpand" />
-                                    <StackLayout Orientation="Horizontal">
-                                        <Image Source="profile_grey.png" Margin="0,5,0,0" VerticalOptions="Start" HorizontalOptions="Start"/>
-                                        <Label Text="{Binding TenantDetails}" LineBreakMode="MiddleTruncation" VerticalTextAlignment="Start" FontSize="Small" TextColor="Gray" />
+                                    <BoxView BackgroundColor="{StaticResource Grey-Light-2}" HeightRequest="1" HorizontalOptions="FillAndExpand" />
+                                    <StackLayout Orientation="Horizontal" Margin="0">
+                                        <Image Source="profile_grey.png"  VerticalOptions="CenterAndExpand" HorizontalOptions="Start"/>
+                                        <Label Text="{Binding TenantDetails}" LineBreakMode="MiddleTruncation" VerticalTextAlignment="Center" VerticalOptions="CenterAndExpand" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                     </StackLayout>
                                     <StackLayout Orientation="Horizontal" VerticalOptions="StartAndExpand" IsVisible="{Binding FirstCommentShown}">
                                         <Image Source="chat_grey.png" Margin="0,5,0,0" VerticalOptions="Start" HorizontalOptions="Start" />
-                                        <Label Text="{Binding FirstComment}" LineBreakMode="WordWrap"  FontSize="Small" TextColor="Gray" />
+                                        <Label Text="{Binding FirstComment}" LineBreakMode="WordWrap"  FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                     </StackLayout>
-                                    <Button Text="View ticket" IsVisible="{Binding FirstCommentShown}" InputTransparent="true" HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="#318bfa" BackgroundColor="Transparent"/>
+                                    <Button Text="View ticket" IsVisible="{Binding FirstCommentShown}" InputTransparent="true" HorizontalOptions="StartAndExpand" FontSize="Small" TextColor="{StaticResource Primary}" BackgroundColor="Transparent"/>
                                 </StackLayout>
                                 <StackLayout Grid.Column="2" Padding="8,8,4,8" VerticalOptions="StartAndExpand">
                                     <Image Source="chevron_down.png" Rotation="0" IsVisible="{Binding FirstCommentShown, Converter={StaticResource InverseBoolConverter} }" VerticalOptions="Start" HorizontalOptions="End"/>
                                     <Image Source="chevron_down.png" Rotation="180" IsVisible="{Binding FirstCommentShown}" VerticalOptions="Start" HorizontalOptions="End"/>
                                     <StackLayout.GestureRecognizers>
-                                            <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.ShowDetails,Source={x:Reference ThisPage}}"  CommandParameter="{Binding .}" Tapped="Handle_Tapped" />
+                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.ShowDetails,Source={x:Reference ThisPage}}"  CommandParameter="{Binding .}" Tapped="Handle_Tapped" />
                                     </StackLayout.GestureRecognizers>
                                 </StackLayout>
+                                     <Grid.GestureRecognizers>
+                                        <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnItemTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
+                                    </Grid.GestureRecognizers>
                             </Grid>  
-                                <Frame.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1" Command="{Binding BindingContext.OnItemTapped,Source={x:Reference ThisPage}}" CommandParameter="{Binding .}" />
-                                </Frame.GestureRecognizers>
+                           
                         </Frame>
                     </ViewCell>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
+        </StackLayout>
         <Frame IsVisible="{Binding IsLoading}" BackgroundColor="Transparent" Grid.Row="2" HasShadow="false"  VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
             <StackLayout>
                 <ActivityIndicator Color="Gray" IsRunning="true" HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand" />
@@ -159,9 +163,6 @@
                 <Label Text="Try a broadening your search" HorizontalTextAlignment="Center" FontSize="Small"  TextColor="Gray"/>
             </StackLayout>
     </Grid>
-        
-       
-        
         <!-- button for creating new ticket -->
         <Image Source="plus_1_1.png" 
                x:Name="AddNewTicketButton"
