--- a/ManageGo/Views/PaymentsPage.xaml
+++ b/ManageGo/Views/PaymentsPage.xaml
@@ -75,21 +75,30 @@
                 <ListView ItemsSource="{Binding FetchedPayments}" 
                           SelectionMode="None" HasUnevenRows="true" 
                           BackgroundColor="Transparent" 
+                          IsPullToRefreshEnabled="true"
+                          IsRefreshing="{Binding IsRefreshingList}"
+                          RefreshCommand="{Binding OnPulledToRefresh}"
                           SeparatorVisibility="None" Margin="22,18,22,18" 
                           CachingStrategy="RecycleElement">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <ViewCell>
-                                <Frame HasShadow="false" BackgroundColor="White" Margin="0,0,0,12" Padding="14">
-                                    <StackLayout Orientation="Horizontal" Margin="0,12,0,12" Spacing="22">
-                                        <Label Text="&#11044;" TextColor="{Binding StatusColor}" FontSize="Small" HorizontalOptions="Center" Margin="8,6,0,0" VerticalOptions="StartAndExpand"/>
+                                <Frame HasShadow="false" BackgroundColor="White" Margin="0,0,0,12" Padding="14,6,14,6">
+                                    <StackLayout Orientation="Horizontal" Margin="0,8,0,8" Spacing="22">
+                                        <Label Text="&#11044;" TextColor="{Binding StatusColor}" FontSize="Medium" HorizontalOptions="Center" Margin="8,0,0,0" VerticalTextAlignment="Center" VerticalOptions="StartAndExpand"/>
                                         <StackLayout HorizontalOptions="FillAndExpand">
                                             <StackLayout Orientation="Horizontal">
                                                 <Label VerticalTextAlignment="Center">
                                                     <Label.FormattedText>
                                                         <FormattedString>
-                                                            <Span Text="{Binding TotalAmountAndFees, StringFormat={StaticResource FormatDecimalToCurrency}}" FontSize="Medium" TextColor="{StaticResource Grey-Mid-1}" />
-                                                            <Span Text="  &#9679;  " FontSize="Micro" TextColor="{StaticResource Grey-Light-1}" />
+                                                            <Span Text="{Binding TotalAmountAndFees, StringFormat={StaticResource FormatDecimalToCurrency}}" FontSize="Medium" FontAttributes="Bold" TextColor="{StaticResource Grey-Mid-1}" />
+                                                        </FormattedString>
+                                                    </Label.FormattedText>
+                                                </Label>
+                                                <Label VerticalTextAlignment="Center" >
+                                                    <Label.FormattedText>
+                                                        <FormattedString>
+                                                            <Span Text=" &#9679;  " FontSize="Micro" TextColor="{StaticResource Grey-Light-1}" />
                                                             <Span Text="{Binding TransactionDate, StringFormat={StaticResource DateTimeToHeaderString}}" FontSize="Small" TextColor="{StaticResource Grey-Light-1}" />
                                                         </FormattedString>
                                                     </Label.FormattedText>
@@ -97,9 +106,6 @@
                                                 <StackLayout Grid.Column="2" Padding="8,8,4,8" HorizontalOptions="EndAndExpand">
                                                     <Image  Source="chevron_down.png" Rotation="0" IsVisible="{Binding DetailsShown, Converter={StaticResource InverseBoolConverter} }" VerticalOptions="Start" HorizontalOptions="End"/>
                                                     <Image  Source="chevron_down.png" Rotation="180" IsVisible="{Binding DetailsShown}" VerticalOptions="Start" HorizontalOptions="End"/>
-                                                    <StackLayout.GestureRecognizers>
-                                                            <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}"  CommandParameter="{Binding .}"  />
-                                                    </StackLayout.GestureRecognizers>
                                                 </StackLayout>
                                             </StackLayout>
                                             <BoxView HeightRequest="1" Margin="0,4,0,4" BackgroundColor="{StaticResource Grey-Light-2}" />
@@ -152,6 +158,9 @@
                                             </StackLayout>
                                         </StackLayout>
                                     </StackLayout>
+                                    <Frame.GestureRecognizers>
+                                        <TapGestureRecognizer NumberOfTapsRequired="1" Tapped="Handle_Tapped" Command="{Binding BindingContext.OnShowDetailsTapped,Source={x:Reference ThisPage}}"  CommandParameter="{Binding .}"  />
+                                    </Frame.GestureRecognizers>
                                 </Frame>
                             </ViewCell>
                         </DataTemplate>
